Clean up contributors list (as not directly contributed to this package)

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "author": "René Bernhardsgrütter <rene@folleon.com>",
-  "contributors": [
-    "Andreas Gal"
-  ],
+  "contributors": [],
   "license": "MIT",
   "repository": {
     "type": "git",
